--- a/static/styles.css
+++ b/static/styles.css
@@ -37,3 +37,8 @@ ul.entries {
 ul.entries li {
   margin-bottom: 8px;
 }
+
+ul.entries li em.domain {
+  margin-left: 8px;
+  color: rgba(0, 0, 0, 0.75);
+}
