--- a/static/styles.css
+++ b/static/styles.css
@@ -1,3 +1,11 @@
+/* Global */
+
+html {
+  font-size: 18px;
+  line-height: 1.6em;
+  font-family: Helvetica, Arial, sans-serif;
+}
+
 /* Header */
 
 header.header nav {
@@ -41,4 +49,24 @@ ul.entries li {
 ul.entries li em.domain {
   margin-left: 8px;
   color: rgba(0, 0, 0, 0.75);
+}
+
+/* Log */
+
+pre#log {
+  font-size: 12px;
+  line-height: 1.2em;
+}
+
+/* Entry */
+
+article {
+  max-width: 35em;
+  margin: 0 auto;
+  font-size: 18px;
+}
+
+article span.published {
+  font-size: 16px;
+  line-height: 1.2em;
 }
