Also bundle css with bun so it busts caches
And updates the `build.rs` script so that it also builds a manifest.txt
for css files.

--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -70,3 +70,10 @@ article span.published {
   font-size: 16px;
   line-height: 1.2em;
 }
+
+article img {
+  max-width: 100%;
+  max-height: 100%;
+  width: auto;
+  height: auto;
+}
