--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -144,9 +144,23 @@ form.add-feed-form .form-grid textarea {
   resize: vertical;
 }
 
-form.add-feed-form input[type="submit"] {
+form.add-feed-form button {
   font-size: 14px;
   margin-top: 24px;
   padding: 4px 16px;
   float: right;
+}
+
+/* Feed */
+
+header.feed-header {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+header.feed-header button {
+  font-size: 14px;
+  padding: 4px 16px;
+  margin-left: 24px;
 }
