--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -71,6 +71,10 @@ article {
   font-size: 18px;
 }
 
+article .title {
+  line-height: 1.3;
+}
+
 article span.published {
   font-size: 16px;
   line-height: 1.2em;
