Replace hotwire with htmx
In the process, also improve the feedback from the import/add feed
forms.

I also replaced the frontend code to replace utc timestamps with local
time strings with @hotwired/stimulus with vanilla js.

--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -156,7 +156,7 @@ form.feed-form .form-grid button {
   grid-column: 3 / 4;
 }
 
-ul#add-feed-messages {
+ul.stream-messages {
   list-style: none;
   padding: 0;
   margin: 0;
@@ -164,7 +164,7 @@ ul#add-feed-messages {
   white-space: nowrap;
 }
 
-ul#add-feed-messages li {
+ul.stream-messages li {
   overflow: hidden;
   white-space: no-wrap;
   text-overflow: ellipsis;
